# Talleres_Paradigmas

./: README.md
Taller Imperativo/: CMakeLists.txt  Celsius.c  Digitos.c  DigitosPares.c  Millas.c  listarPalabras.c  strcat.c  strcmp.c  texto
Taller Prolog/: TallerPrologGVM.pl  TallerPrologGVM.pl~
Taller Racket/: TallerRacketGVM.bak  TallerRacketGVM.rkt
