cmake_minimum_required(VERSION 3.29)
project(Taller_Imperativo C)

set(CMAKE_C_STANDARD 17)

add_executable(Millas Millas.c)
add_executable(Celsius Celsius.c)
add_executable(Digitos Digitos.c)
add_executable(DigitosPares DigitosPares.c)
add_executable(strcmp strcmp.c)
add_executable(strcat strcat.c)
add_executable(listarPalabras listarPalabras.c)
